--- a/automl.ipynb
+++ b/automl.ipynb
@@ -425,6 +425,9 @@
       "source": [
         "from azureml.core import Environment\r\n",
         "from azureml.core.model import InferenceConfig\r\n",
+        "\r\n",
+        "from azureml.core.webservice import AciWebservice, Webservice\r\n",
+        "\r\n",
         "best_model.download_file('outputs/scoring_file_v_1_0_0.py','score.py')\r\n",
         "env= best_model.download_file('outputs/conda_env_v_1_0_0.yml','myenv.yml')\r\n",
         "#best_model.download_files('~/cloudfiles/code/Users/odl_user_137677/myenv.yml','myenv.yml')\r\n",
@@ -432,10 +435,20 @@
         "#env=Environment.from_conda_specification(name='conda_env_v_1_0_0',file_path='outputs/conda_env_v_1_0_0.yml')\r\n",
         "#env=Environment.from_conda_specification(file_path='outputs/conda_env_v_1_0_0.yml', name='myenv.yml')\r\n",
         "\r\n",
-        "inference_config = InferenceConfig(entry_script='score.py', environment=env)\r\n"
+        "inference_config = InferenceConfig(entry_script='score.py', environment=env)\r\n",
+        "\r\n",
+        "deployment_config = AciWebservice.deploy_configuration(cpu_cores = 1,\r\n",
+        "                                                       memory_gb = 1)\r\n",
+        "\r\n",
+        "# Define the model, inference, & deployment configuration and web service name and location to deploy\r\n",
+        "service = Model.deploy(workspace = ws,\r\n",
+        "                       name = \"capstonewebservice\",\r\n",
+        "                       models = [model],\r\n",
+        "                       inference_config = inference_config,\r\n",
+        "                       deployment_config = deployment_config)\r\n"
       ],
       "outputs": [],
-      "execution_count": 31,
+      "execution_count": 35,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -447,7 +460,7 @@
           }
         },
         "gather": {
-          "logged": 1612664585106
+          "logged": 1612665276262
         }
       }
     }
