--- a/automl.ipynb
+++ b/automl.ipynb
@@ -442,13 +442,13 @@
         "\r\n",
         "# Define the model, inference, & deployment configuration and web service name and location to deploy\r\n",
         "service = Model.deploy(workspace = ws,\r\n",
-        "                       name = \"capstonewebservice\",\r\n",
+        "                       name = \"capstonewebservice1\",\r\n",
         "                       models = [model],\r\n",
         "                       inference_config = inference_config,\r\n",
         "                       deployment_config = deployment_config)\r\n"
       ],
       "outputs": [],
-      "execution_count": 35,
+      "execution_count": 47,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -460,7 +460,60 @@
           }
         },
         "gather": {
-          "logged": 1612665276262
+          "logged": 1612666473126
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#service.wait_for_deployment(show_output = True)\r\n",
+        "print(service.scoring_uri)\r\n",
+        "print(service.swagger_uri)\r\n",
+        "\r\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n",
+            "None\n"
+          ]
+        }
+      ],
+      "execution_count": 51,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1612667157335
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     }
