--- a/automl.ipynb
+++ b/automl.ipynb
@@ -467,11 +467,11 @@
         "inference_config = InferenceConfig(entry_script='score.py', environment=env)\r\n",
         "\r\n",
         "aci_config = AciWebservice.deploy_configuration(cpu_cores = 1,\r\n",
-        "                                                       memory_gb = 1,enable_app_insights=True)\r\n",
+        "                                                       memory_gb = 1,enable_app_insights=True,auth_enabled=True)\r\n",
         "\r\n",
         "# Define the model, inference, & deployment configuration and web service name and location to deploy\r\n",
         "service = Model.deploy(workspace = ws,\r\n",
-        "                       name = \"capstonewebservice3\",\r\n",
+        "                       name = \"capstonewebservice4\",\r\n",
         "                       models = [model],\r\n",
         "                       inference_config = inference_config,\r\n",
         "                       deployment_config = aci_config)\r\n",
@@ -484,14 +484,14 @@
           "name": "stdout",
           "text": [
             "Tips: You can try get_logs(): https://aka.ms/debugimage#dockerlog or local deployment: https://aka.ms/debugimage#debug-locally to debug if deployment takes longer than 10 minutes.\n",
-            "Running...............................\n",
+            "Running..........................................\n",
             "Succeeded\n",
             "ACI service creation operation finished, operation \"Succeeded\"\n",
             "Healthy\n"
           ]
         }
       ],
-      "execution_count": 27,
+      "execution_count": 29,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -503,7 +503,7 @@
           }
         },
         "gather": {
-          "logged": 1612744705372
+          "logged": 1612745236053
         }
       }
     },
@@ -520,12 +520,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://2e4b91da-ba68-4230-917d-a5d2dd912608.southcentralus.azurecontainer.io/score\n",
-            "http://2e4b91da-ba68-4230-917d-a5d2dd912608.southcentralus.azurecontainer.io/swagger.json\n"
+            "http://7fc97cba-403d-4a67-94d6-75c59e993c07.southcentralus.azurecontainer.io/score\n",
+            "http://7fc97cba-403d-4a67-94d6-75c59e993c07.southcentralus.azurecontainer.io/swagger.json\n"
           ]
         }
       ],
-      "execution_count": 28,
+      "execution_count": 30,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -538,13 +538,169 @@
           }
         },
         "gather": {
-          "logged": 1612744739162
+          "logged": 1612745261337
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "primary, secondary = service.get_keys()\r\n",
+        "print(primary)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2dWFKY9vrvS77ghrIaWozc5WBPgDV5oX\n"
+          ]
+        }
+      ],
+      "execution_count": 31,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1612746958111
         }
       }
     },
     {
       "cell_type": "code",
       "source": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'TabularDataset' object has no attribute 'loc'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-33-6ebec25b19f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'TabularDataset' object has no attribute 'loc'"
+          ]
+        }
+      ],
+      "execution_count": 33,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\r\n",
+        "import json\r\n",
+        "\r\n",
+        "# URL for the web service\r\n",
+        "scoring_uri = 'http://7fc97cba-403d-4a67-94d6-75c59e993c07.southcentralus.azurecontainer.io/score'\r\n",
+        "# If the service is authenticated, set the key or token\r\n",
+        "key = '2dWFKY9vrvS77ghrIaWozc5WBPgDV5oX'\r\n",
+        "\r\n",
+        "# Two sets of data to score, so we get two results back\r\n",
+        "data = {\"data\":\r\n",
+        "        [\r\n",
+        "            [\r\n",
+        "              'MS', 'F', 19, 'R', 'GT3', 'T', 2, 3, 'services', 'other', 'mother', 1, 3, 1, 'no', 'no', 'no', 'yes', 'no', 'yes', 'yes', 'no', 5, 4, 2, 1, 5, 0, 7, 5, 0\r\n",
+        "            ],\r\n",
+        "           [\r\n",
+        "              'MS', 'F', 19, 'R', 'GT3', 'T', 2, 3, 'services', 'other', 'mother', 1, 3, 1, 'no', 'no', 'no', 'yes', 'no', 'yes', 'yes', 'no', 5, 4, 2, 1, 5, 0, 7, 5, 0\r\n",
+        "            ]\r\n",
+        "        ]\r\n",
+        "        }\r\n",
+        "# Convert to JSON string\r\n",
+        "input_data = json.dumps(data)\r\n",
+        "\r\n",
+        "# Set the content type\r\n",
+        "headers = {'Content-Type': 'application/json'}\r\n",
+        "# If authentication is enabled, set the authorization header\r\n",
+        "headers['Authorization'] = f'Bearer {key}'\r\n",
+        "\r\n",
+        "# Make the request and display the response\r\n",
+        "resp = requests.post(scoring_uri, input_data, headers=headers)\r\n",
+        "print(resp.text)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"{\\\"result\\\": [1, 1]}\"\n"
+          ]
+        }
+      ],
+      "execution_count": 36,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1612747936528
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "service.get_logs()"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 37,
+          "data": {
+            "text/plain": "'2021-02-08T00:46:59,943799583+00:00 - rsyslog/run \\n2021-02-08T00:46:59,944346491+00:00 - gunicorn/run \\n2021-02-08T00:46:59,947458033+00:00 - nginx/run \\n2021-02-08T00:46:59,948319545+00:00 - iot-server/run \\n/usr/sbin/nginx: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libcrypto.so.1.0.0: no version information available (required by /usr/sbin/nginx)\\n/usr/sbin/nginx: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libcrypto.so.1.0.0: no version information available (required by /usr/sbin/nginx)\\n/usr/sbin/nginx: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\\n/usr/sbin/nginx: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\\n/usr/sbin/nginx: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\\nrsyslogd: /azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/libuuid.so.1: no version information available (required by rsyslogd)\\nEdgeHubConnectionString and IOTEDGE_IOTHUBHOSTNAME are not set. Exiting...\\n2021-02-08T00:47:00,117086557+00:00 - iot-server/finish 1 0\\n2021-02-08T00:47:00,118115572+00:00 - Exit code 1 is normal. Not restarting iot-server.\\nStarting gunicorn 19.9.0\\nListening at: http://127.0.0.1:31311 (14)\\nUsing worker: sync\\nworker timeout is set to 300\\nBooting worker with pid: 42\\nSPARK_HOME not set. Skipping PySpark Initialization.\\nGenerating new fontManager, this may take some time...\\nInitializing logger\\n2021-02-08 00:47:01,569 | root | INFO | Starting up app insights client\\n2021-02-08 00:47:01,571 | root | INFO | Starting up request id generator\\n2021-02-08 00:47:01,571 | root | INFO | Starting up app insight hooks\\n2021-02-08 00:47:01,571 | root | INFO | Invoking user\\'s init function\\n2021-02-08 00:47:04,822 | root | INFO | Users\\'s init has completed successfully\\n2021-02-08 00:47:04,897 | root | INFO | Skipping middleware: dbg_model_info as it\\'s not enabled.\\n2021-02-08 00:47:04,897 | root | INFO | Skipping middleware: dbg_resource_usage as it\\'s not enabled.\\n2021-02-08 00:47:04,899 | root | INFO | Scoring timeout is found from os.environ: 60000 ms\\n2021-02-08 00:47:11,339 | root | INFO | 200\\n127.0.0.1 - - [08/Feb/2021:00:47:11 +0000] \"GET /swagger.json HTTP/1.0\" 200 3829 \"-\" \"Go-http-client/1.1\"\\n2021-02-08 00:47:15,807 | root | INFO | 200\\n127.0.0.1 - - [08/Feb/2021:00:47:15 +0000] \"GET /swagger.json HTTP/1.0\" 200 3829 \"-\" \"Go-http-client/1.1\"\\n2021-02-08 00:47:49,863 | root | INFO | 200\\n127.0.0.1 - - [08/Feb/2021:00:47:49 +0000] \"GET /swagger.json HTTP/1.0\" 200 3829 \"-\" \"Go-http-client/1.1\"\\n2021-02-08 00:47:50,197 | root | INFO | 200\\n127.0.0.1 - - [08/Feb/2021:00:47:50 +0000] \"GET /swagger.json HTTP/1.0\" 200 3829 \"-\" \"Go-http-client/1.1\"\\n2021-02-08 01:31:45,022 | root | INFO | Validation Request Content-Type\\n2021-02-08 01:31:45,022 | root | INFO | Scoring Timer is set to 60.0 seconds\\n2021-02-08 01:31:45,032 | root | ERROR | Encountered Exception: Traceback (most recent call last):\\n  File \"/var/azureml-server/synchronous/routes.py\", line 64, in run_scoring\\n    response = invoke_user_with_timer(service_input, request_headers)\\n  File \"/var/azureml-server/synchronous/routes.py\", line 97, in invoke_user_with_timer\\n    result = user_main.run(**params)\\n  File \"/var/azureml-app/main.py\", line 21, in run\\n    return_obj = driver_module.run(**arguments)\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/wrapt/wrappers.py\", line 564, in __call__\\n    args, kwargs)\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/inference_schema/schema_decorators.py\", line 57, in decorator_input\\n    kwargs[param_name] = _deserialize_input_argument(kwargs[param_name], param_type, param_name)\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/inference_schema/schema_decorators.py\", line 285, in _deserialize_input_argument\\n    input_data = param_type.deserialize_input(input_data)\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/inference_schema/parameter_types/pandas_parameter_type.py\", line 58, in deserialize_input\\n    data_frame.columns = self.sample_input.columns\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/pandas/core/generic.py\", line 5192, in __setattr__\\n    return object.__setattr__(self, name, value)\\n  File \"pandas/_libs/properties.pyx\", line 67, in pandas._libs.properties.AxisProperty.__set__\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/pandas/core/generic.py\", line 690, in _set_axis\\n    self._data.set_axis(axis, labels)\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/pandas/core/internals/managers.py\", line 183, in set_axis\\n    \"values have {new} elements\".format(old=old_len, new=new_len)\\nValueError: Length mismatch: Expected axis has 32 elements, new values have 31 elements\\n\\nDuring handling of the above exception, another exception occurred:\\n\\nTraceback (most recent call last):\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/flask/app.py\", line 1832, in full_dispatch_request\\n    rv = self.dispatch_request()\\n  File \"/azureml-envs/azureml_7ade26eb614f97df8030bc480da59236/lib/python3.6/site-packages/flask/app.py\", line 1818, in dispatch_request\\n    return self.view_functions[rule.endpoint](**req.view_args)\\n  File \"/var/azureml-server/synchronous/routes.py\", line 43, in score_realtime\\n    return run_scoring(service_input, request.headers, request.environ.get(\\'REQUEST_ID\\', \\'00000000-0000-0000-0000-000000000000\\'))\\n  File \"/var/azureml-server/synchronous/routes.py\", line 77, in run_scoring\\n    raise RunFunctionException(str(exc))\\nrun_function_exception.RunFunctionException\\n\\n2021-02-08 01:31:45,039 | root | INFO | 500\\n127.0.0.1 - - [08/Feb/2021:01:31:45 +0000] \"POST /score HTTP/1.0\" 500 75 \"-\" \"python-requests/2.25.1\"\\n2021-02-08 01:32:16,016 | root | INFO | Validation Request Content-Type\\n2021-02-08 01:32:16,017 | root | INFO | Scoring Timer is set to 60.0 seconds\\n2021-02-08 01:32:16,422 | root | INFO | 200\\n127.0.0.1 - - [08/Feb/2021:01:32:16 +0000] \"POST /score HTTP/1.0\" 200 22 \"-\" \"python-requests/2.25.1\"\\n'"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 37,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1612748473795
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "service.delete()"
+      ],
       "outputs": [],
       "execution_count": null,
       "metadata": {
